# athenian-api

./: .codecov.yml  .dockerignore  .gitignore  .gitmodules  .snyk  .travis.yml  DEPLOYMENT.md  Dockerfile  Dockerfile.testing  Makefile  README.md  SECURITY.md  Webapp pages costs analysis using HAR files.ipynb  codecov.yml  databases.patch  docker-compose.yaml  generate-server.sh  load_pg_data.sh  medvedi_patched_setup.py  submit_secrets.py
server/: .flake8  .semgrepignore  ADDING_ENDPOINTS.md  DEBUGGING.md  DEBUGGING_MEMORY.md  DELETE_ACCOUNT.md  MANHOLE.md  Makefile  PERFORMANCE.md  README.md  lint-requirements.txt  mypy.ini  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements.txt  segment.sql  semgrep.yaml  setup.py  submit_debug_info.sh  test-requirements.txt
server/athenian/: __init__.py
server/athenian/api/: __init__.py  __main__.py  aiocron.py  aiohttp_addons.py  application.py  ariadne.py  async_read_sql_query.py  async_utils.py  asyncpg_recordobj.h  auth.py  balancing.py  become.py  cache.py  connexion.py  create_default_user.py  db.py  defer.py  especifico.py  faster_pandas.py  ffx.py  int_to_str.py  invite_admin.py  kms.py  mandrill.py  metadata.py  object_arrays.pyx  pandas_io.pyx  prometheus.py  request.py  response.py  segment.py  sentry_native.pyx  sentry_wrapper.py  serialization.py  slogging.py  sorted_intersection.pyx  sorted_ops.pyx  sparse_mask.py  to_object_arrays.pyx  tracing.py  (+4 more)
server/tests/: Dockerfile  benchmarks.py  conftest.py  gen_mock_db.py  gen_sqlite_db.py  load_pg_data.sh  load_postgres_data.py  mdb_transfer.py  run_static_checks.sh  sample_db_data.py  test_ariadne.py  test_async_utils.py  test_auth.py  test_cache.py  test_cors.py  test_data.sql.xz  test_db.py  test_db_performance.py  test_default_controller.py  test_defer.py  test_heavy_load.py  test_invite_admin.py  test_kms.py  test_logging.py  test_mandrill.py  test_manhole.py  test_metrics_controller.py  test_microintegration.py  test_object_arrays.py  test_pandas_io.py  test_sentry.py  test_serialization.py  test_show_email.py  test_sorted_ops.py  test_spec.py  test_tracing.py  test_typing_utils.py  test_unordered_unique.py  torture.json.xz
server/tests/align/: test_auth.py  test_models.py  utils.py
server/tests/controllers/: conftest.py  test_account.py  test_backoffice_controller.py  test_calculator_selector.py  test_contributors_controller.py  test_cors.py  test_events_controller.py  test_filter_controller.py  test_goal_controller.py  test_histograms_controller.py  test_integrations_controller.py  test_invitation_controller.py  test_jira.py  test_jira_controller.py  test_prefixer.py  (+13 more)
(+892 files in other folders)
