[build-system]
requires = ["setuptools!=60.6.0", "wheel", "Cython>=0.29.30", "numpy==1.22.4"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "app_validate_responses",
]

[tool.isort]
# case_sensitive = false
order_by_type = false
force_sort_within_sections = true
# multi_line_output = 2
profile = "black"
line_length = 99
# combine_as_imports = true


[tool.black]
line-length = 99
skip-magic-trailing-comma = false


[tool.yapf]
based_on_style = "pep8"
split_before_first_argument = true
dedent_closing_brackets = true