[build-system]
requires = ["setuptools!=60.6.0,!=64.0.0", "wheel", "Cython>=0.29.30", "numpy==1.23.3"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "app_validate_responses",
    "filter_repositories",
    "filter_contributors",
    "filter_pull_requests",
    "filter_commits",
    "filter_releases",
    "filter_labels",
]

[tool.isort]
profile = "black"
combine_as_imports = true
force_sort_within_sections = true
line_length = 99

[tool.black]
line-length = 99
preview = true
